manifests/test/monitoring/monitoring_gateway.networking.k8s.io_v1beta1_gateway_kube-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
  name: kube-prometheus
  namespace: monitoring
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.57
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: grafana.10.5.0.57.nip.io
    name: grafana
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: grafana-gateway-tls
      mode: Terminate
